@@ -138,7 +138,6 @@ EXTRA_timidity_SOURCES = \
 	vorbis_a.c \
 	w32_a.c \
 	w32g_a.c \
-	timpp32g.ini \
 	w32_gogo.c \
 	w32_gogo.h \
 	gogo_a.h \
